Minor changes for readability and removed unused imports and code

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">TV Series Demo</string>
+    <string name="loading">Loading... Please wait...</string>
 </resources>
