Update layout by adding a retry button

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,6 @@
     <string name="app_name">TV Series Demo</string>
     <string name="popular_shows">Popular TV Shows</string>
     <string name="loading">Loading... Please wait...</string>
+    <string name="error">Something went wrong. Please try again</string>
+    <string name="retry">retry</string>
 </resources>
